--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --config test/.mocharc.js \"test/**/*.ts\""
   },
   "author": {
     "name": "Andrei Sabau"
@@ -15,9 +15,13 @@
   "license": "MIT",
   "devDependencies": {
     "@types/connect": "^3.4.33",
+    "@types/mocha": "^8.0.3",
     "@types/node": "^14.14.7",
     "@types/serve-static": "^1.13.7",
-    "@types/vhost": "^3.0.1"
+    "@types/vhost": "^3.0.1",
+    "mocha": "^8.1.3",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   },
   "dependencies": {
     "chai": "^4.2.0",
