--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "get-set-fetch-test-utils",
+  "name": "@get-set-fetch/test-utils",
   "version": "0.3.0",
   "description": "scraping test definitions, launches resources to be scraped under a configurable web server",
   "keywords": ["scraping", "test definition"],
