each test can be applied to one or multiple scrape scenarios

--- a/lib/scraping-suite/static-binary-no-extensions.json
+++ b/lib/scraping-suite/static-binary-no-extensions.json
@@ -14,7 +14,7 @@
   
   "definition": {
     "url": "http://sitea.com",
-    "scenario": "static-content",
+    "scenarios": ["browser-static-content", "dom-static-content"],
     "pluginOpts": [
       {
         "name": "ExtractUrlsPlugin",
