--- a/lib/scraping-suite/static-binary-no-extensions.json
+++ b/lib/scraping-suite/static-binary-no-extensions.json
@@ -13,7 +13,7 @@
   ],
   
   "definition": {
-    "url": "http://sitea.com",
+    "name": "sitea.com",
     "pipelines": ["browser-static-content", "dom-static-content"],
     "pluginOpts": [
       {
@@ -27,6 +27,9 @@
           }
         ]
       }
+    ],
+    "resources": [
+      {"url": "http://sitea.com"}
     ]
   },
 
